# claim_processing

./: .gitignore  CLAUDE.md  README.md  claims.db  db_seeder.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
Frontend/: README.md  package-lock.json
Frontend/src/: App.jsx  index.css
Frontend/src/api/: client.js
Frontend/src/components/layout/: AppLayout.jsx  Header.css  Header.jsx  Sidebar.css  Sidebar.jsx
Frontend/src/context/: AppContext.jsx
Frontend/src/views/: ClaimsView.jsx  DisputesView.jsx  MembersView.jsx  PoliciesView.jsx
ai-artifacts/: README.md  assumptions-and-requirements.md  chat-exports.md  corrections-made.md
app/: database.py  main.py
app/api/: routes.py
app/db/: models.py
app/domain/: enums.py  models.py  value_objects.py
app/repositories/: in_memory.py  sqlalchemy.py
app/services/: adjudication.py  coverage.py  explanation.py
app/tests/: conftest.py  test_adjudication.py  test_adjudication_comprehensive.py  test_api_integration.py  test_claim_lifecycle.py  test_coverage_tracker.py  test_domain_models.py  test_edge_cases.py  test_explanation.py  test_explanation_comprehensive.py  test_repositories.py  test_value_objects.py
docs/: database-schema.md  decisions.md  domain-model.md  plan.md  self-review.md
scripts/: seed_data.py
